Source/WebCore/html/BaseTextInputType.cpp
@@ -39,13 +39,15 @@ bool BaseTextInputType::isTextType() const
 
 bool BaseTextInputType::patternMismatch(const String& value) const
 {
+    // FIXME: We should execute RegExp parser first to check validity instead of creating an actual RegularExpression.
+    // https://bugs.webkit.org/show_bug.cgi?id=183361
     const AtomicString& rawPattern = element().attributeWithoutSynchronization(patternAttr);
-    if (rawPattern.isNull() || value.isEmpty() || !JSC::Yarr::RegularExpression(rawPattern).isValid())
+    if (rawPattern.isNull() || value.isEmpty() || !JSC::Yarr::RegularExpression(rawPattern, JSC::Yarr::TextCaseSensitive, JSC::Yarr::MultilineDisabled, JSC::Yarr::UnicodeAwareMode).isValid())
         return false;
     String pattern = "^(?:" + rawPattern + ")$";
     int matchLength = 0;
     int valueLength = value.length();
-    int matchOffset = JSC::Yarr::RegularExpression(pattern).match(value, 0, &matchLength);
+    int matchOffset = JSC::Yarr::RegularExpression(pattern, JSC::Yarr::TextCaseSensitive, JSC::Yarr::MultilineDisabled, JSC::Yarr::UnicodeAwareMode).match(value, 0, &matchLength);
     return matchOffset || matchLength != valueLength;
 }
 
